UNRELEASED, S3QL tip

  * SECURITY ADVISORY: Previous mkfs.s3ql versions used /dev/urandom
    to generate the master key when creating a new encrypted file
    system. However, /dev/urandom is not guaranteed to provide the
    256-bits of entropy requested by S3QL. This may have allowed an
    attacker to predict parts of the master key in situations where
    little entropy is available (e.g. right after system boot, or if a
    different program has previously drained the entropy pool).

    Note that the master key is not affected when the file system
    passphrase is changed. The only way to recover from a potentially
    compromised master key is to create a new file system and copy
    over all data.

  * When creating new file systems, the master key is now generated by
    reading /dev/random rather than /dev/urandom to ensure sufficient
    entropy.

  * Fixed a crash when using the "disable-expect100" swift backend
    option.

  * Fixed a race condition that could lead to a "KeyError" crash
    when refreshing a Google Storage OAuth2 access token.

  * Fixed a race condition that could lead to a hanging mount.s3ql
    process and hanging test_thread_hang() unit test.

  * Updated internal metadata storage and checksum format. The old
    format was difficult to secure against malicious backend data and
    could have resulted in false-positive checksum mismatches with
    future or different Python interpreters.

  * Sizes (e.g. in the s3qlstat output) are now always reported
    with three significant digits.

  * Fixed a bug that caused fsck.s3ql to either abort with a
    "apsw.ConstraintError" or to incorrectly consider storage
    objects as missing when the connection to remote server is
    interrupted while retrieving the object list.

  * Storage urls without any prefix (e.g. s3://foo, but also
    s3://foo/) are now using the same local cache
    directory. Previously they would use different directories,